feat: implement i18n logic and project structure, replace all animation library by gsap, minified all css and js files

--- a/index.html
+++ b/index.html
@@ -2,18 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Videograph Template">
+    <meta name="keywords" content="Videograph, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Site Tite -->
     <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
+
+    <!-- Site Icon -->
     <link rel="icon" type="image/png" href="/assets/img/logo/Logo-dark.png">
+
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="/assets/vendors/bootstrap/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/assets/vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/loader.min.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/main.min.css" type="text/css">
 </head>
 <body>
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
+    <div id="singularity"></div>
+    <div class="text-container">
+        <div id="typed-text"></div>
+    </div>
+    <div id="final-text-container" class="text-center text-white">
+        <p id="final-text">
+            <span id="welcome-text" class="welcome">WELCOME TO MY</span>
+            <strong id="universe-text" class="universe-text">universe</strong>
+        </p>
+        <hr/>
+        <p id="description-text">
+            This is my portfolio website, where you can find my projects, skills, and experiences. Feel free to explore and
+            get to know me better. Come and reach out to me! <img src="/assets/img/illustrations/vlogger.gif" width="25" height="25">
+        </p>
+        <a id="final-button" href="#">
+            <button id="cta-button">
+                <img id="rocket" src="/assets/img/cursors/rocket-launch.png" alt="">
+                <span id="cta-span" class="pt-1">Start exploring</span>
+            </button>
+        </a>
+    </div>
+    <div id="button-container">
+        <a href="/portfolio.html">
+            <button id="skip-button">
+                <span id="skip-span">Skip</span>
+                <i class="fa fa-step-forward"></i>
+            </button>
+        </a>
+    </div>
+
+    <section id="shooting-star"></section>
+
+    <script src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script src="/assets/i18n/utils.js"></script>
+    <script src="/assets/i18n/main.js"></script>
+    <script src="/assets/vendors/threejs/three.min.js"></script>
+    <script src="/assets/vendors/threejs/OrbitControls.js"></script>
+    <script src="/assets/vendors/threejs/EffectComposer.js"></script>
+    <script src="/assets/vendors/threejs/ShaderPass.js"></script>
+    <script src="/assets/vendors/threejs/RenderPass.js"></script>
+    <script src="/assets/vendors/threejs/UnrealBloomPass.js"></script>
+    <script src="/assets/js/main.min.js" defer></script>
+    <!-- Scripts non critiques en différé -->
+    <script src="/assets/vendors/typed.js/typed.umd.js" defer></script>
+    <script src="/assets/vendors/fontawesome/js/all.min.js" defer></script>
+    <script src="/assets/vendors/threejs/CopyShader.js" defer></script>
+    <script src="/assets/vendors/threejs/LuminosityHighPassShader.js" defer></script>
+    <script src="/assets/vendors/threejs/RoundedBoxGeometry.js" defer></script>
+    <script src="/assets/vendors/threejs/dat.gui.min.js" defer></script>
     <script>
-        var preferedLanguage = window.localStorage.getItem("PREFERED_LANGUAGE");
-        if (!preferedLanguage) {
-            preferedLanguage = "EN";
-            window.localStorage.setItem("PREFERED_LANGUAGE", preferedLanguage);
-        }
-        window.location.pathname = preferedLanguage === "EN" ? "/en" : "/fr";
     </script>
 </body>
 </html>
