fix: remove defer to script import, correct json lang errors

--- a/index.html
+++ b/index.html
@@ -64,14 +64,11 @@
     <script src="/assets/vendors/threejs/ShaderPass.js"></script>
     <script src="/assets/vendors/threejs/RenderPass.js"></script>
     <script src="/assets/vendors/threejs/UnrealBloomPass.js"></script>
-    <script src="/assets/js/main.min.js" defer></script>
-    <!-- Scripts non critiques en différé -->
-    <script src="/assets/vendors/typed.js/typed.umd.js" defer></script>
-    <script src="/assets/vendors/fontawesome/js/all.min.js" defer></script>
-    <script src="/assets/vendors/threejs/CopyShader.js" defer></script>
-    <script src="/assets/vendors/threejs/LuminosityHighPassShader.js" defer></script>
-    <script src="/assets/vendors/threejs/RoundedBoxGeometry.js" defer></script>
-    <script src="/assets/vendors/threejs/dat.gui.min.js" defer></script>
+    <script src="/assets/vendors/threejs/CopyShader.js"></script>
+    <script src="/assets/vendors/threejs/LuminosityHighPassShader.js"></script>
+    <script src="/assets/vendors/typed.js/typed.umd.js"></script>
+    <script src="/assets/vendors/fontawesome/js/all.min.js"></script>
+    <script src="/assets/js/main.min.js"></script>
     <script>
     </script>
 </body>
