--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,7 @@
                                 <h2 class="mb-3 hello-text" id="hero-hello-text">Hello !!</h2>
                                 <h2 class="presentation-text" id="hero-presentation-text">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
-                                    <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker"
-                                        data-i18n-typed-items="hero_typed_items" id="hero-typed-initial-text">Web
+                                    <span class="typed mb-5" id="hero-typed-initial-text">Web
                                         developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
@@ -763,25 +762,25 @@
     <!-- Footer End -->
 
     <!-- Theatre states -->
-    <script src="/assets/js/jquery-3.3.1.min.js" defer></script>
-    <script src="/assets/i18n/utils.js" defer></script>
-    <script src="/assets/i18n/language-selector.js" defer></script>
-    <script src="/assets/i18n/main.js" defer></script>
-    <script src="/assets/vendors/typed.js/typed.umd.js" defer></script>
-    <script src="/assets/vendors/fontawesome/js/all.min.js" defer></script>
-    <script src="/assets/js/mixitup.min.js" defer></script>
-    <script src="/assets/js/email.min.js" defer></script>
-    <script src="/assets/vendors/bootstrap/bootstrap.min.js" defer></script>
-    <script src="/assets/vendors/toastify/toastify-js.js" defer></script>
-    <script src="/assets/vendors/slicknav/jquery.slicknav.js" defer></script>
-    <script src="/assets/vendors/swiper/swiper-bundle.min.js" defer></script>
-    <script src="/assets/vendors/threejs/three.min.js" defer></script>
-    <script src="/assets/vendors/vanta/vanta.globe.min.js" defer></script>
-    <script src="/assets/vendors/scroll-to-top/scroll-to-top.min.js" defer></script>
-    <script src="/assets/vendors/gsap/gsap.min.js" defer></script>
-    <script src="/assets/vendors/gsap/scrollTrigger.min.js" defer></script>
-    <script src="/assets/js/animations.min.js" defer></script>
-    <script src="/assets/js/portfolio.min.js" defer></script>
+    <script src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script src="/assets/i18n/utils.js"></script>
+    <script src="/assets/i18n/language-selector.js"></script>
+    <script src="/assets/i18n/main.js"></script>
+    <script src="/assets/vendors/typed.js/typed.umd.js"></script>
+    <script src="/assets/vendors/fontawesome/js/all.min.js"></script>
+    <script src="/assets/js/mixitup.min.js"></script>
+    <script src="/assets/js/email.min.js"></script>
+    <script src="/assets/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="/assets/vendors/toastify/toastify-js.js"></script>
+    <script src="/assets/vendors/slicknav/jquery.slicknav.js"></script>
+    <script src="/assets/vendors/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/vendors/threejs/three.min.js"></script>
+    <script src="/assets/vendors/vanta/vanta.globe.min.js"></script>
+    <script src="/assets/vendors/scroll-to-top/scroll-to-top.min.js"></script>
+    <script src="/assets/vendors/gsap/gsap.min.js"></script>
+    <script src="/assets/vendors/gsap/scrollTrigger.min.js"></script>
+    <script src="/assets/js/animations.min.js"></script>
+    <script src="/assets/js/portfolio.min.js"></script>
     
 </body>
 
