fix bug in the hero section text due to i18n logic

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,7 @@
                                 <h2 class="mb-3 hello-text" id="hero-hello-text">Hello !!</h2>
                                 <h2 class="presentation-text" id="hero-presentation-text">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
-                                    <span class="typed mb-5" id="hero-typed-initial-text">Web
-                                        developer</span>
+                                    <span class="typed mb-5" id="hero-typed-initial-text"></span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
                                 <a id="hero-button" href="#contact" class="primary-btn contact-button">
