loading speed optimisation: remove uncesessary lines in locale JS files, minify main js files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
     <script src="/assets/i18n/utils.js"></script>
-    <script src="/assets/i18n/main.js"></script>
+    <script src="/assets/i18n/main.min.js"></script>
     <script src="/assets/vendors/threejs/three.min.js"></script>
     <script src="/assets/vendors/threejs/OrbitControls.js"></script>
     <script src="/assets/vendors/threejs/EffectComposer.js"></script>
