--- a/portfolio.html
+++ b/portfolio.html
@@ -764,7 +764,7 @@
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
     <script src="/assets/i18n/utils.js"></script>
     <script src="/assets/i18n/language-selector.js"></script>
-    <script src="/assets/i18n/main.js"></script>
+    <script src="/assets/i18n/main.min.js"></script>
     <script src="/assets/vendors/typed.js/typed.umd.js"></script>
     <script src="/assets/vendors/fontawesome/js/all.min.js"></script>
     <script src="/assets/js/mixitup.min.js"></script>
