add new meta informations

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Videograph Template">
-    <meta name="keywords" content="Videograph, unica, creative, html">
+    <meta name="description"
+        content="Dylan Rakotonarivo - Developer, Designer & Public Speaker. Expert in web development, web design, creative visuals, and public speaking coaching. Specialized in React, Spring Boot, Django, and modern web technologies.">
+    <meta name="keywords"
+        content="web developer, web designer, software engineer, public speaker, Madagascar, React, Spring Boot, Django, UI/UX design, full-stack developer, creative visuals, graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dylan Rakotonarivo - Developer, Designer & Public Speaker">
+    <meta property="og:description"
+        content="Passionate digital solutions creator specializing in web development, design, and public speaking. Building secure, user-friendly applications with emerging technologies.">
+    <meta property="og:url" content="https://dylan-rakotonarivo.vercel.app">
+    <meta property="og:image" content="/assets/img/hero/heroBlue.png">
+    <meta property="og:site_name" content="Dylan Rakotonarivo Portfolio">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Dylan Rakotonarivo - Developer, Designer & Public Speaker">
+    <meta name="twitter:description"
+        content="Full-stack developer & designer from Madagascar. Expertise in React, Spring Boot, Django, web design, and public speaking coaching.">
+    <meta name="twitter:image" content="/assets/img/hero/heroBlue.png">
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="author" content="Dylan Rakotonarivo">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dylan-rakotonarivo.vercel.app">
 
     <!-- Site Tite -->
     <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
