add llama ocr project

--- a/portfolio.html
+++ b/portfolio.html
@@ -460,6 +460,7 @@
                             <div class="tool red">Groq API</div>
                             <div class="tool red">YOLO</div>
                             <div class="tool red">PandasAI</div>
+                            <div class="tool red">LlamaCloud</div>
                             <div class="tool red">N8N</div>
                         </div>
                     </div>
@@ -568,6 +569,24 @@
                             <li>HTML, CSS</li>
                             <li>Bootstrap</li>
                             <li>GSAP</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/9.png">
+                        <a href="https://llama-ocr-engine.onrender.com/" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h5 id="project_ocr">AI-Powered Document Data Extraction</h5>
+                        <ul>
+                            <li>Vanilla js</li>
+                            <li>Fast API</li>
+                            <li>LlamaCloud</li>
                         </ul>
                     </div>
                 </div>
